# Gauntmore

./: CMakeLists.txt  CollisionDetector.cpp  CollisionDetector.h  README.md  Skeleton.cpp  Skeleton.h  gauntmore_macosx-Info.plist  run.sh
SDL/: .hg_archival.txt
SDL/include/: SDL_config_windows.h
SDL/src/video/uikit/: SDL_uikitview.h
data/tmx/: outside_right.tmx  outside_right2.tmx  room.tmx
data/xmls/: sounds.xml  sprites.xml  ui.xml
data/xmls/tmx/: room.tmx
game/proj.cmake/: CMakeLists.txt
game/proj.macosx/GamePart1_macosx.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
game/src/: Game.cpp  Map.h  Player.cpp  Player.h  entry_point.cpp
gauntmore_macosx.xcodeproj/: project.pbxproj
gauntmore_macosx.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
gauntmore_macosx.xcodeproj/project.xcworkspace/xcshareddata/: gauntmore_macosx.xccheckout
gauntmore_macosx.xcodeproj/project.xcworkspace/xcuserdata/Keith.xcuserdatad/: UserInterfaceState.xcuserstate
gauntmore_macosx.xcodeproj/project.xcworkspace/xcuserdata/My_Mac.xcuserdatad/: UserInterfaceState.xcuserstate
gauntmore_macosx.xcodeproj/project.xcworkspace/xcuserdata/ReverendCode.xcuserdatad/: UserInterfaceState.xcuserstate
meetings/: week5_1.txt  week5_2.txt  week6_1.txt  week6_2.txt  week7_1.txt  week7_2.txt  week8_1.txt  week8_2.txt  week9_1.txt
oxygine-framework/: CMakeLists.txt  change_log.txt  license.txt  readme.md  ref_event.patch
oxygine-framework/3rdPartyTools/BMFont/: readme.txt
oxygine-framework/cmake/: FindSDL2.cmake
oxygine-framework/doc/: Home.md  actors.md  atlasses.md  colors.md  custom_shaders.md  debug.md  events.md  filesystem.md  fonts.md  index.html  magicparticles.md  resources.md  sounds.md  start.md
oxygine-framework/examples/Demo/: later.patch  prepare_res.bat  prepare_res_etc1.bat  prepare_res_low.bat  prepare_res_pvrtc.bat
oxygine-framework/examples/Demo/src/: TestDrag.h  (+19 more)
oxygine-framework/examples/Game/: readme.txt
oxygine-framework/examples/Match3/: credits.txt  match3.mkb
oxygine-framework/examples/TutorialResources/: TutorialResources.mkb
oxygine-framework/game/proj.cmake/: CMakeLists.txt  run.sh
oxygine-framework/game/src/: Creature.cpp  Game.cpp  Game.h  KeyboardInput.cpp  KeyboardInput.h  Map.cpp  Player.cpp  Player.h  Unit.cpp  Unit.h  entry_point.cpp  gauntmore.cpp  gauntmore.h  res.cpp  res.h
oxygine-framework/libs/: SDL2.lib  SDL2main.lib
oxygine-framework/oxygine/marmalade/: oxygine-framework.mkf  oxygine.mkf  oxygine_lib.mkb  oxygine_lib.mkf
oxygine-framework/oxygine/src/: Actor.cpp  Actor.h  AnimationFrame.cpp  AnimationFrame.h  AsyncTask.cpp  AsyncTask.h  Box9Sprite.cpp  Box9Sprite.h  Button.cpp  Button.h  ClipRectActor.cpp  ClipRectActor.h  Clock.cpp  Clock.h  ColorRectSprite.cpp  ColorRectSprite.h  DebugActor.cpp  DebugActor.h  Draggable.cpp  Draggable.h  Event.h  EventDispatcher.cpp  EventDispatcher.h  Font.cpp  Font.h  HttpRequestTask.cpp  HttpRequestTask.h  Input.cpp  Input.h  InputText.cpp  InputText.h  KeyEvent.h  MaskedRenderer.cpp  MaskedRenderer.h  MaskedSprite.cpp  MaskedSprite.h  MemoryTexture.cpp  MemoryTexture.h  Multithreading.cpp  Multithreading.h  (+40 more)
oxygine-framework/oxygine/system_data/: build.py
oxygine-framework/part1/proj.macosx/: TmxImageLayer.cpp  TmxLayer.cpp  TmxObjectGroup.cpp  TmxTileset.cpp
oxygine-framework/part1/src/: Game.h  res.cpp
oxygine-framework/readme/: Android.txt  CMake.txt  MacOSX.txt  Marmalade.txt  VisualStudio.txt  emscripten.txt  iOS.txt  readme.txt
oxygine-framework/tools/: gen_template.py  gen_view_code.py  oxygine.py  readme.txt
oxygine-framework/tools/gen_view_code/: class_type.py
oxygine-framework/tools/others/: build_oxygine_with_sdl.py  build_oxygine_zip.py  convert_font2sd.py  embed_folder_js.py  fileslist.py  gen_includes.py  gen_xml_resources.py  genfn.py  include.py  oxyresbuild_tests.py  png_strip.py  single_strip.py
oxygine-framework/tools/resbuild/: atlas.py  oxygine_helper.py  process.py  process_atlas.py  process_font.py  process_starling_atlas.py  xml_processor.py
oxygine-sound/: .hg_archival.txt  .hgignore  Android.mk  CMakeLists.txt  oxygine-sound.mkf  oxygine-sound_lib.mkb
oxygine-sound/dependencies/libogg/: Android.mk  libogg.mkf  libogg_.mkf
oxygine-sound/dependencies/openal/: Android.mk
oxygine-sound/dependencies/openalext/: openalext.mkf  openalext.s4e  openalext_android.mkb  openalext_android_java.mkb  openalext_windows.mkb  readme.md
oxygine-sound/dependencies/tremor/: Android.mk  CMakeLists.txt  libtremor.mkf
oxygine-sound/examples/SoundDemo/proj.cmake/: CMakeLists.txt
oxygine-sound/proj.ios/oxygine-sound.xcodeproj/: project.pbxproj
oxygine-sound/proj.win32/: oxygine-sound_vs2010.vcxproj  oxygine-sound_vs2010.vcxproj.filters  oxygine-sound_vs2013.vcxproj
oxygine-sound/src/: Channel.h  Channels.h  MemoryStream.cpp  MemoryStream.h  OggStream.cpp  OggStream.h  ResSound.cpp  ResSound.h  Sound.h  SoundInstance.cpp  SoundInstance.h  SoundPlayer.cpp  SoundPlayer.h  SoundSystem.h  oal.h
oxygine-sound/src/emscripten/: ChannelEmscripten.cpp  ChannelEmscripten.h  SoundEmscripten.cpp  SoundEmscripten.h  SoundSystemEmscripten.cpp  SoundSystemEmscripten.h
oxygine-sound/src/null/: ChannelNull.cpp  ChannelNull.h  SoundNull.cpp  SoundNull.h  SoundSystemNull.cpp  SoundSystemNull.h
oxygine-sound/src/oal/: Channel_oal.cpp  SoundSystem_oal.cpp  SoundSystem_oal.h  Sound_oal.h
oxygine-sound/src/s3e/: Channel_s3e.cpp  Channel_s3e.h  SoundSystem_s3e.cpp  SoundSystem_s3e.h  Sound_s3e.cpp  Sound_s3e.h
src/: Armor.cpp  Armor.h  ArmorCount.cpp  ArmorCount.h  Bat.cpp  Bat.h  Bee.cpp  Bee.h  Chest.cpp  Chest.h  Collision.cpp  Collision.h  CollisionDetector.cpp  CollisionDetector.h  Creature.cpp  Creature.h  CreatureMover.cpp  CreatureMover.h  DeathMenu.cpp  DeathMenu.h  Eyeball.cpp  Eyeball.h  Game.cpp  Game.h  GameScene.cpp  GameScene.h  Gauntmore.cpp  Gauntmore.h  Ghost.cpp  Ghost.h  Gold.cpp  Gold.h  GoldCount.cpp  GoldCount.h  GreaterThan.cpp  GreaterThan.h  HealthBar.cpp  HealthBar.h  KeyboardInput.cpp  KeyboardInput.h  (+52 more)
src/tmx/: TmxObject.cpp
(+533 files in other folders)
